Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,31 +1,60 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta name="theme-color" content="#0B0D12" />
   <title>IMVpedia Voice</title>
-  <link rel="stylesheet" href="style.css" />
+
+  <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-  <div id="app">
-    <header class="topbar">
-      <span class="logo">IMVpedia Voice</span>
-      <button id="adminBtn">Admin</button>
-    </header>
+  <!-- Topbar fixa -->
+  <header class="topbar">
+    <div class="topbar__left">
+      <span class="brandDot"></span>
+      <span class="topbar__title">IMVpedia Voice</span>
+    </div>
 
-    <main id="view"></main>
+    <a class="btn btn--chip" href="#/admin">Admin</a>
+  </header>
 
-    <nav class="tabbar">
-      <button data-route="home">Início</button>
-      <button data-route="path">Trilha</button>
-      <button data-route="missions">Missões</button>
-      <button data-route="library">Biblioteca</button>
-      <button data-route="profile">Perfil</button>
-    </nav>
-  </div>
+  <!-- App (o JS injeta tudo aqui) -->
+  <main id="app" class="app"></main>
 
-  <div id="toastHost"></div>
+  <!-- Toast host (o JS escreve aqui) -->
+  <div id="toastHost" class="toastHost"></div>
 
+  <!-- Tabbar fixa (navega por hash, sem depender do JS) -->
+  <nav class="tabbar" role="navigation" aria-label="Navegação">
+    <a class="tabbar__item" href="#/home">
+      <span class="tabbar__icon">🏠</span>
+      <span class="tabbar__label">Início</span>
+    </a>
+
+    <a class="tabbar__item" href="#/pack?id=base">
+      <span class="tabbar__icon">🧭</span>
+      <span class="tabbar__label">Trilha</span>
+    </a>
+
+    <a class="tabbar__item" href="#/home">
+      <span class="tabbar__icon">✅</span>
+      <span class="tabbar__label">Missões</span>
+    </a>
+
+    <a class="tabbar__item" href="#/pack?id=base">
+      <span class="tabbar__icon">📚</span>
+      <span class="tabbar__label">Biblioteca</span>
+    </a>
+
+    <a class="tabbar__item" href="#/profile">
+      <span class="tabbar__icon">👤</span>
+      <span class="tabbar__label">Perfil</span>
+    </a>
+  </nav>
+
+  <!-- Seu app.js (o MERGE FINAL) -->
   <script src="app.js"></script>
 </body>
 </html>
