--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
 
   <!-- Tabbar fixa (navega por hash, sem depender do JS) -->
   <nav class="tabbar" role="navigation" aria-label="Navegação">
-    <a class="tabbar__item" href="#/home">
+    <a class="tabbar__item" href="#/home" data-to="home">
       <span class="tabbar__icon">🏠</span>
       <span class="tabbar__label">Início</span>
     </a>
 
-    <a class="tabbar__item" href="#/pack?id=base">
+    <a class="tabbar__item" href="#/path" data-to="path">
       <span class="tabbar__icon">🧭</span>
       <span class="tabbar__label">Trilha</span>
     </a>
 
-    <a class="tabbar__item" href="#/home">
+    <a class="tabbar__item" href="#/missions" data-to="missions">
       <span class="tabbar__icon">✅</span>
       <span class="tabbar__label">Missões</span>
     </a>
 
-    <a class="tabbar__item" href="#/pack?id=base">
+    <a class="tabbar__item" href="#/library" data-to="library">
       <span class="tabbar__icon">📚</span>
       <span class="tabbar__label">Biblioteca</span>
     </a>
 
-    <a class="tabbar__item" href="#/profile">
+    <a class="tabbar__item" href="#/profile" data-to="profile">
       <span class="tabbar__icon">👤</span>
       <span class="tabbar__label">Perfil</span>
     </a>
