--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- Tabbar fixa (navega por hash, sem depender do JS) -->
   <nav class="tabbar" role="navigation" aria-label="Navegação">
-    <a class="tabbar__item" href="#/library">
+    <a class="tabbar__item" href="#/home">
       <span class="tabbar__icon">🏠</span>
       <span class="tabbar__label">Início</span>
     </a>
@@ -43,7 +43,7 @@
       <span class="tabbar__label">Missões</span>
     </a>
 
-    <a class="tabbar__item" href="#/path">
+    <a class="tabbar__item" href="#/library">
       <span class="tabbar__icon">📚</span>
       <span class="tabbar__label">Biblioteca</span>
     </a>
