Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
 
   <!-- App (o JS injeta tudo aqui) -->
-  <main id="app" class="app"></main>
+  <main id="view" class="app"></main>
 
   <!-- Toast host (o JS escreve aqui) -->
   <div id="toastHost" class="toastHost"></div>
