--- a/index.html
+++ b/index.html
@@ -1,60 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta name="theme-color" content="#0B0D12" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>IMVpedia Voice</title>
-
   <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-  <!-- Topbar fixa -->
   <header class="topbar">
     <div class="topbar__left">
-      <span class="brandDot"></span>
-      <span class="topbar__title">IMVpedia Voice</span>
+      <span class="dot"></span>
+      <span class="brand">IMVpedia Voice</span>
     </div>
-
-    <a class="btn btn--chip" href="#/admin">Admin</a>
+    <button class="btn btn--ghost" id="adminBtn" type="button">Admin</button>
   </header>
 
-  <!-- App (o JS injeta tudo aqui) -->
-  <main id="view" class="app"></main>
+  <main id="view" class="app" role="main" aria-live="polite"></main>
 
-  <!-- Toast host (o JS escreve aqui) -->
-  <div id="toastHost" class="toastHost"></div>
-
-  <!-- Tabbar fixa (navega por hash, sem depender do JS) -->
   <nav class="tabbar" role="navigation" aria-label="Navegação">
-    <a class="tabbar__item" href="#/home">
-      <span class="tabbar__icon">🏠</span>
-      <span class="tabbar__label">Início</span>
-    </a>
-
-    <a class="tabbar__item" href="#/path">
-      <span class="tabbar__icon">🧭</span>
-      <span class="tabbar__label">Trilha</span>
-    </a>
-
-    <a class="tabbar__item" href="#/missions">
-      <span class="tabbar__icon">✅</span>
-      <span class="tabbar__label">Missões</span>
-    </a>
-
-    <a class="tabbar__item" href="#/library">
-      <span class="tabbar__icon">📚</span>
-      <span class="tabbar__label">Biblioteca</span>
-    </a>
-
-    <a class="tabbar__item" href="#/profile">
-      <span class="tabbar__icon">👤</span>
-      <span class="tabbar__label">Perfil</span>
-    </a>
+    <button class="tabbar__item" data-route="home" type="button">Início</button>
+    <button class="tabbar__item" data-route="path" type="button">Trilha</button>
+    <button class="tabbar__item" data-route="missions" type="button">Missões</button>
+    <button class="tabbar__item" data-route="library" type="button">Biblioteca</button>
+    <button class="tabbar__item" data-route="profile" type="button">Perfil</button>
   </nav>
 
-  <!-- Seu app.js (o MERGE FINAL) -->
+  <div id="toastHost" aria-live="polite" aria-atomic="true"></div>
+
   <script src="app.js"></script>
 </body>
 </html>
